--- a/pom.xml
+++ b/pom.xml
@@ -16,6 +16,7 @@
         <module>StringDance</module>
         <module>02_Patterns</module>
         <module>03_Reflection</module>
+        <module>Collections</module>
     </modules>
 
     <dependencies>
@@ -40,6 +41,18 @@
             <version>2.4.8</version>
         </dependency>
     </dependencies>
+
+    <build>
+        <plugins>
+            <plugin>
+                <artifactId>maven-compiler-plugin</artifactId>
+                <configuration>
+                    <source>1.8</source>
+                    <target>1.8</target>
+                </configuration>
+            </plugin>
+        </plugins>
+    </build>
 
 
 </project>
